2021-02-10  Jay Berkenbilt  <ejb@ql.org>

	* Add "attachments" as an additional json key, and add some
	information about attachments to the json output.

	* Add new command-line arguments for operating on attachments:
	--list-attachments, --add-attachment, --remove-attachment,
	--copy-attachments-from. See --help and manual for details.

2021-02-09  Jay Berkenbilt  <ejb@ql.org>

	* Add methods to QUtil for working with PDF timestamp strings:
	pdf_time_to_qpdf_time, qpdf_time_to_pdf_time,
	get_current_qpdf_time.

2021-02-08  Jay Berkenbilt  <ejb@ql.org>

	* Add helper classes for file attachments:
	QPDFEmbeddedFileDocumentHelper, QPDFFileSpecObjectHelper,
	QPDFEFStreamObjectHelper. See their header files for details.

2021-02-07  Jay Berkenbilt  <ejb@ql.org>

	* Add new functions QUtil::pipe_file and QUtil::file_provider for
	sending the contents of a file through a pipeline as binary data.

2021-02-04  Jay Berkenbilt  <ejb@ql.org>

	* Add new option --pasword-file=file for reading the decryption
	password from a file. file may be "-" to read from standard input.
	Fixes #499.

	* By default, give an error if a user attempts to encrypt a file
	with a 256-bit key, a non-empty user password, and an empty owner
	password. Such files are insecure since they can be opened with no
	password. To allow explicit creation of files like this, pass the
	new --allow-insecure option. Thanks to github user RobK88 for a
	detailed analysis and for reporting this issue. Fixes #501.

2021-02-02  Jay Berkenbilt  <ejb@ql.org>

	* Bug fix: if a form XObject lacks a resources dictionary,
	consider any names in that form XObject to be referenced from the
	containing page. This is compliant with older PDF versions. Also
	detect if any form XObjects have any unresolved names and, if so,
	don't remove unreferenced resources from them or from the page
	that contains them. Fixes #494.

2021-01-31  Jay Berkenbilt  <ejb@ql.org>

	* Bug fix: properly handle strings if they appear in inline image