@@ -1,5 +1,8 @@
 2021-02-10  Jay Berkenbilt  <ejb@ql.org>
 
+	* Detect loops when adding when reading outlines dictionary upon
+	initialization of QPDFOutlineDocumentHelper (fuzz issue 30507).
+
 	* Add "attachments" as an additional json key, and add some
 	information about attachments to the json output.
 
